--- a/src/main/resources/i18n/constants_en_US.properties
+++ b/src/main/resources/i18n/constants_en_US.properties
@@ -1,6 +1,7 @@
 action.failed=Operation failed
 action.success=Operation succeeded
 file.upload_file_not_exists=Upload File Not Exists
+file.upload_file_md5_not_exists=Upload File MD5 Not Exists
 file.file_not_exists=file does not exist
 param.fileId_not_exist=fileId cannot be empty
 param.id_not_exist=id cannot be empty
