--- a/src/main/resources/i18n/constants_zh_CN.properties
+++ b/src/main/resources/i18n/constants_zh_CN.properties
@@ -1,6 +1,7 @@
 action.failed=\u64CD\u4F5C\u5931\u8D25
 action.success=\u64CD\u4F5C\u6210\u529F
 file.upload_file_not_exists=\u4E0A\u4F20\u6587\u4EF6\u4E3A\u7A7A
+file.upload_file_md5_not_exists=\u4E0A\u4F20\u6587\u4EF6MD5\u503C\u4E3A\u7A7A
 file.file_not_exists=\u6587\u4EF6\u4E0D\u5B58\u5728
 param.fileId_not_exist=\u6587\u4EF6id\u4E0D\u80FD\u4E3A\u7A7A
 param.id_not_exist=id\u4E0D\u80FD\u4E3A\u7A7A
